remove extra profiles