@@ -11,19 +11,6 @@
     <properties>
         <testng.version>7.8.0</testng.version>
     </properties>
-
-    <profiles>
-        <profile>
-            <id>jdk16</id>
-            <activation>
-                <jdk>[16, 20]</jdk>
-            </activation>
-            <properties>
-                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
-            </properties>
-        </profile>
-    </profiles>
-
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
